moved community today to report feed and more styling

--- a/client/src/styles/SideBar.css
+++ b/client/src/styles/SideBar.css
@@ -1,3 +1,10 @@
 .material-icons {
   color: #6096BA;
 }
+
+.side {
+  background-color: white;
+  margin-right: -25px;
+  border: 1px solid lightgray;
+ 
+}
