added responsive design

--- a/client/src/styles/Report.css
+++ b/client/src/styles/Report.css
@@ -11,8 +11,8 @@
 }
 
 .selected {
-  color: #6096BA;
+  color: #6096BA !important;
 }
 .unselected {
-  color: lightgray
+  color: lightgray !important;
 }
